--- a/demo/components/button/button.scss
+++ b/demo/components/button/button.scss
@@ -1,4 +1,4 @@
-$parent: "button";
+$parent: 'button';
 
 .#{$parent} {
   width: 25px;
@@ -9,6 +9,7 @@ $parent: "button";
   &__button {
     width: 100%;
     height: 100%;
+    cursor: pointer;
   }
 
   &__content {
