--- a/demo/components/example/example.scss
+++ b/demo/components/example/example.scss
@@ -1,28 +1,14 @@
 .example {
   width: 100%;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
 
-  // &__label {
-  //   &.label {
-  //     text-align: center;
-  //     font-weight: bold;
-  //   }
-  // }
-
-  &__body {
-    padding: 1rem 0;
-    display: flex;
+  &__head {
+    padding: 1rem;
   }
 
-  // &__panel {
-  //   &.panel {
-  //     flex-shrink: 0;
-  //     max-width: 400px;
-  //     border: 1px solid #e4e4e4;
-  //     border-radius: 4px;
-  //     padding: 1rem;
-  //   }
-  // }
+  &__body {
+    padding: 1rem;
+    display: flex;
+  }
 }
