--- a/demo/components/link/link.pug
+++ b/demo/components/link/link.pug
@@ -1,13 +1,22 @@
-mixin link(props = {})
-    -
-        let { content, href, title, target } = props;
-        let rel = "";
-        if (target === '_blank') {
-            rel = "noopener";
-        }
-    a.link(
-        href=href
-        title=title
-        target=target
-        rel=rel
-    )=content
+mixin link(props)
+    if props
+        -
+            let { content, href, title, target, theme } = props;
+            let rel = "";
+            let themes = {
+                section: 'section',
+                panel: 'panel',
+            };
+            if (target === '_blank') {
+                rel = "noopener";
+            }
+            let className = 'link';
+            let classNames = `${className}`;
+            classNames += themes[theme] ? ` ${className}_theme_${themes[theme]}` : ''; 
+        a(
+            href=href
+            title=title
+            target=target
+            rel=rel
+            class=classNames
+        )=content
