--- a/demo/components/panel/panel.scss
+++ b/demo/components/panel/panel.scss
@@ -2,14 +2,17 @@
   width: 100%;
   display: flex;
   flex-grow: 1;
-  flex-shrink: 1;
   flex-basis: 100%;
-  padding: 0.4rem;
   flex-direction: column;
 
-  &__label {
+  flex-shrink: 0;
+  max-width: 400px;
+  border: 1px solid #e4e4e4;
+  border-radius: 4px;
+  padding: 1rem;
+
+  &__head {
     text-align: center;
-    font-weight: bold;
   }
 
   &__sections {
