--- a/demo/index.scss
+++ b/demo/index.scss
@@ -1,10 +1,16 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC,
     Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   font-variant: tabular-nums;
-  font-feature-settings: "tnum", "tnum";
-  color: #717484;
+  font-feature-settings: 'tnum', 'tnum';
+  color: #7f7f7f;
   font-size: 14px;
 }
 
