--- a/demo/components/slider/slider.pug
+++ b/demo/components/slider/slider.pug
@@ -1,8 +1,6 @@
 mixin slider(props = {})
-    -
-        let className = 'slider';
-        let classNames = `${className}`;
-    div(
-        class=classNames
-    )
-        .slider__dummy.js-slider__dummy
+  -
+    let className = 'slider';
+    let classNames = `${className}`;
+  div(class=classNames)
+    div(class=`${className}__dummy js-${className}__dummy`)
