--- a/demo/index.scss
+++ b/demo/index.scss
@@ -5,18 +5,15 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC,
-    Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-  font-variant: tabular-nums;
-  font-feature-settings: 'tnum', 'tnum';
   color: #7f7f7f;
+  font-family: -apple-system, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-feature-settings: 'tnum', 'tnum';
+  font-variant: tabular-nums;
   font-size: 14px;
 }
 
 *,
 ::after,
 ::before {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
