--- a/demo/components/panel/panel.scss
+++ b/demo/components/panel/panel.scss
@@ -1,12 +1,12 @@
 .panel {
-  border: 1px solid #e4e4e4;
+  border: 1px solid $color-grey-light;
   border-radius: 4px;
   display: flex;
   flex-basis: 100%;
   flex-direction: column;
   flex-grow: 1;
   flex-shrink: 0;
-  max-width: 400px;
+  max-width: 28.571rem;
   padding: 1rem;
   width: 100%;
 
