--- a/demo/components/section/section.scss
+++ b/demo/components/section/section.scss
@@ -2,7 +2,7 @@ $parent: 'section';
 
 .#{$parent} {
   align-items: center;
-  border: 1px solid #e4e4e4;
+  border: 1px solid $color-grey-light;
   border-radius: 4px;
   display: flex;
   margin-top: 0.4rem;
